# rustracer

./: .gitignore  Cargo.toml  README  makefile
src/: camera_math.rs  color.rs  commontypes.rs  main.rs  pixvec.rs  shapes.rs
