[package]
name = "rusttracer"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"

[dependencies]
glib-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
gtk-sys = "^0"
gdk-pixbuf-sys = "^0"
cgmath = "^0"

[features]
default = ["gdk-pixbuf-sys/v2_32", "gdk-pixbuf/v2_32"]